--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <link rel="stylesheet" href="styles/animate.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -29,8 +28,8 @@
             <label for="horror">Horror</label>
             <input name="test" type="radio" id="comedy" value="comedy">
             <label for="comedy">Comedy</label>
-            <input name="test" type="radio" id="sports" value="sports"> 
-            <label for="sports">Sports</label>
+            <input name="test" type="radio" id="trueCrime" value="trueCrime"> 
+            <label for="trueCrime">True Crime</label>
             <input name="test" type="radio" id="nonFiction" value="nonFiction"> 
             <label for="nonFiction">Non Fiction</label>
             <input name="test" type="radio" id="fiction" value="fiction"> 
@@ -44,8 +43,8 @@
             <label for="horror">Horror</label>
             <input name="test2" type="radio" id="comedy" value="comedy">
             <label for="comedy">Comedy</label>
-            <input name="test2" type="radio" id="sports" value="sports">
-            <label for="sports">Sports</label>
+            <input name="test2" type="radio" id="trueCrime" value="trueCrime">
+            <label for="trueCrime">True Crime</label>
             <input name="test2" type="radio" id="nonFiction" value="nonFiction">
             <label for="nonFiction">Non Fiction</label>
             <input name="test2" type="radio" id="fiction" value="fiction">
@@ -59,8 +58,8 @@
             <label for="fiction">Fiction</label>
             <input name="test3" type="radio" id="nonFiction" value="nonFiction">
             <label for="nonFiction">Non Fiction</label>
-            <input name="test3" type="radio" id="sports" value="sports">
-            <label for="sports">Sports</label>
+            <input name="test3" type="radio" id="trueCrime" value="trueCrime">
+            <label for="trueCrime">True Crime</label>
             <input name="test3" type="radio" id="horror" value="horror">
             <label for="horror">Horror</label>
             <input name="test3" type="radio" id="comedy" value="comedy">
@@ -74,8 +73,8 @@
             <label for="horror">Horror</label>
             <input name="test4" type="radio" id="comedy" value="comedy">
             <label for="comedy">Comedy</label>
-            <input name="test4" type="radio" id="sports" value="sports">
-            <label for="sports">Sports</label>
+            <input name="test4" type="radio" id="trueCrime" value="trueCrime">
+            <label for="trueCrime">True Crime</label>
             <input name="test4" type="radio" id="nonFiction" value="nonFiction">
             <label for="nonFiction">Non Fiction</label>
             <input name="test4" type="radio" id="fiction" value="fiction">
@@ -90,8 +89,8 @@
             <label for="horror">Horror</label>
             <input name="test5" type="radio" id="comedy" value="comedy">
             <label for="comedy">Comedy</label>
-            <input name="test5" type="radio" id="sports" value="sports">
-            <label for="sports">Sports</label>
+            <input name="test5" type="radio" id="trueCrime" value="trueCrime">
+            <label for="trueCrime">True Crime</label>
             <input name="test5" type="radio" id="nonFiction" value="nonFiction">
             <label for="nonFiction">Non Fiction</label>
             <input name="test5" type="radio" id="fiction" value="fiction">
