--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <!-- div for overlay -->
     <div class="bgOpacity"></div>   
     <header class ="quizHeader">
         <div class="wrapper">
@@ -22,6 +23,7 @@
 
     <main = class"quizMain">
       <div class="wrapper">
+          <!-- first question -->
         <form class="quiz">
             <h3>1. You just found out that you failed your English class. How do you react? </h3>
             <div>
@@ -47,8 +49,7 @@
             <button class ="answerOne">Answer!</button>
         </form>
 
-        
-
+        <!-- 2nd question -->
         <form class="quiz2">
             <h3>2. You witness a complete stranger slip and fall on ice. What do you do? </h3>
             <div>
@@ -74,6 +75,7 @@
             <button class="answerTwo">Answer!</button>
         </form>
 
+        <!-- 3rd question -->
         <form class="quiz3">
             <h3>3. It's 3AM and you are wide awake. Why? </h3>
             <div>
@@ -99,6 +101,7 @@
             <button class="answerThree">Answer!</button>
         </form>
 
+        <!-- 4th question -->
         <form class="quiz4">
             <h3>4. Your waiter brings you the wrong order. What happens next? </h3>
             <div>
@@ -124,7 +127,7 @@
             <button class="answerFour">Answer!</button>
         </form>
 
-
+        <!-- 5th question -->
         <form class="quiz5">
             <h3>5. You start to suspect your new home is haunted... </h3>
           <div>
@@ -150,6 +153,7 @@
             <button class="answerFive">Answer!</button>
         </form>
 
+        <!-- 6th question -->
         <form class="quiz6">
             <h3>6. You're on vacation and you are visiting a new city for the first time. </h3>
           <div>
@@ -175,6 +179,7 @@
             <button class="answerSix">Answer!</button>
         </form>
 
+        <!-- 7th question -->
         <form class="quiz7">
             <h3>7. A new neighbour just moved in next door to you and they seem awefully suspicious... </h3>
             <div>
@@ -200,6 +205,7 @@
             <button class="answerSeven">Answer!</button>
         </form>
 
+        <!-- final  question -->
         <form class="quiz8">
             <h3>9.How do you get to your favourite restaurant? </h3>
             <div>
@@ -218,22 +224,23 @@
         </form>
 
         <div>
-            <p class="ready">You score has been calculated. Please click below to get your recomendation</p>
+            <p class="ready">You score has been calculated. Please click below to get your recommendation.</p>
             <button class ="calculate">Recommend Me A Podcast!</button>
             
         </div>
      </div>
     </main>
 
-
     <div class="wrapper">
+
+        <!-- results will be displayed in this section -->
         <section class="podcastResult">        
-    </section>
-    <button id="reset">Retake Quiz</button>
-        </div>
+        </section>
+         <button id="reset">Retake Quiz</button>
+    </div>
 
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
-    <script src="scripts/script2.js"></script>
+    <script src="scripts/script.js"></script>
 
 </body>
 </html>
