--- a/index.html
+++ b/index.html
@@ -239,6 +239,13 @@
          <button id="reset">Retake Quiz</button>
     </div>
 
+    <footer>
+
+        <div class="wrapper">
+            <h4>&copy Nishi Rathod 2018</h4>
+        </div>
+    </footer>
+
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
     <script src="scripts/script.js"></script>
 
